axum-macros/tests/debug_handler/fail/extract_self_mut.stderr
error: Handlers must only take owned values
  --> tests/debug_handler/fail/extract_self_mut.rs:24:22
   |
24 |     async fn handler(&mut self) {}
   |                      ^^^^^^^^^
